--- a/app/views/rosters/_form.html.erb
+++ b/app/views/rosters/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :名前 %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :course %>
+    <%= form.label :コース %>
     <%= form.text_field :course %>
   </div>
 
   <div class="field">
-    <%= form.label :period %>
+    <%= form.label :受講期 %>
     <%= form.text_field :period %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "入力した生徒を追加する"%>
   </div>
 <% end %>
